<resources>
    <string name="app_name">Orange Player</string>
    <string name="image_holder">Image</string>

    <string name="pick_video">Pick Video</string>
    <string name="home_tab">Home</string>
    <string name="connection_tab">Connections</string>
    <string name="profile_tab">Profile</string>
    <string name="add_connection">Add Connection</string>
    <string name="edit_connection">Edit Connection</string>
    <string name="ali_connection">Ali Cloud Disk</string>
    <string name="baidu_connection">Baidu NetDisk</string>
    <string name="my_files">My Files</string>

    <string name="display_name">Display Name:</string>
    <string name="host_full_path">Host URL:</string>
    <string name="protocol">Protocol:</string>
    <string name="domain_or_ip">Domain/IP:</string>
    <string name="path">Path:</string>
    <string name="port">Port:</string>
    <string name="connect_as">Connect As</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="username_no_comm">Username</string>
    <string name="password_no_comm">Password</string>
    <string name="edit_conn_tips">If you want access lan network shared folder,use \"domain\\username\" or \"username@domain\" format as username</string>
    <string name="scan_device_title">Founded Local Devices:</string>

    <string name="save_success">Saved!</string>
    <string name="save_failed">Save Failed!</string>

    <string name="permission_not_grant">Storage access permission not grant.</string>
    <string name="please_give_storage_permission">Please Grant Storage Access Permission.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="enable_storage_alert">Go to settings to enable access storage permission.</string>
    <string name="grant">Grant</string>
    <string name="agree">Agree</string>
    <string name="refuse">Refuse</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="connection_not_accessible">Connection not accessible</string>
    <string name="connection_info_not_valid">Connection info not valid</string>
    <string name="connection_error">Connect error occur!</string>

    <string name="ble">Blue Tool</string>
    <string name="wifi_direct">WiFi</string>
    <string name="file_server">File Server</string>

    <string name="access_from_internal">Access For Internet</string>
    <string name="random_password">Random generate password</string>
    <string name="start_server_tips">Start server for other device to access files on this device</string>
    <string name="start_server">Start</string>
    <string name="stop_server">Stop Server</string>
    <string name="access_from_smb_client">You can access the server from sbm client now</string>
    <string name="access_from_ftp_client">You can access the server from ftp client now</string>
    <string name="smb_server">Smb Server</string>
    <string name="ftp_server">FTP Server</string>

    <string name="dns_name">SambaDroid</string>
    <string name="button_start_server">Start server</string>
    <string name="button_stop_server">Stop server</string>
    <string name="notification_channel_name">SMB Server</string>
    <string name="notification_channel_description">SMB server service notification</string>
    <string name="message_server_running">The SMB server is running.</string>
    <string name="message_server_waiting_network">Waiting for local network connection…</string>
    <string name="notification_action_stop">Stop server</string>
    <string name="toast_need_storage_permission">Storage permission required</string>
    <string name="toast_error_starting_server">Error starting server</string>
    <string name="toast_error_no_network">Please connect to a local network to start the server.</string>
    <string name="shortcut_start_server_short">Start</string>
    <string name="shortcut_start_server_long">Start server</string>
    <string name="status_server_off">The SMB server is not active.</string>
    <string name="status_server_running">The SMB server is running.\nTo access your files, visit <b>%1$s</b>, <b>%2$s</b> or <b>%3$s</b>.</string>
</resources>