<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_btn"
            android:contentDescription="@string/image_holder"
            android:src="@drawable/back_btn"
            android:scaleType="centerInside"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp"
            android:layout_width="42dp"
            android:layout_height="42dp"/>

        <TextView
            android:id="@+id/title"
            app:layout_constraintStart_toEndOf="@+id/back_btn"
            app:layout_constraintEnd_toStartOf="@+id/search_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/my_files"
            android:textSize="18sp"
            android:textColor="@color/text_primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/search_btn"
            android:src="@drawable/ic_search"
            android:scaleType="centerInside"
            android:padding="8dp"
            android:contentDescription="@string/image_holder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_width="42dp"
            android:layout_height="42dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/storage_alert_box"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rc22_input_color_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tips"
            android:text="@string/permission_not_grant"
            android:textSize="14sp"
            android:textColor="@color/text_red"
            android:layout_marginStart="10dp"
            android:paddingTop="7dp"
            android:paddingBottom="9dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/go_to_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/go_to_settings"
            android:textSize="14sp"
            android:textColor="@color/text_white"
            android:text="@string/grant"
            android:paddingTop="4dp"
            android:paddingBottom="6dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/rc12_red_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/file_list"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/storage_alert_box"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>