<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/input_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/image_holder"
            android:onClick="onBackClick"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/access_from_internal"
            android:textAlignment="textStart"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_btn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/icon_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/icon_pc"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_computer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/icon_right"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_right"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/icon_phone"
            app:layout_constraintStart_toEndOf="@+id/icon_pc"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_phone"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/middle_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/icon_box">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/config_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white">

            <CheckBox
                android:id="@+id/enable_random_pass_cb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-2dp"
                app:layout_constraintEnd_toStartOf="@+id/random_pass_title"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/random_pass_title" />

            <TextView
                android:id="@+id/random_pass_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:text="@string/random_password"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/enable_random_pass_cb"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="wrap" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/edit_port_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_goneMarginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/edit_pass_box"
                app:layout_constraintTop_toBottomOf="@id/random_pass_title">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline0"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.37" />

                <TextView
                    android:id="@+id/port_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/port"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline0"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="wrap" />

                <EditText
                    android:id="@+id/port_et"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edit_bg_selector"
                    android:inputType="number"
                    android:maxLength="4"
                    android:text="1027"
                    android:textSize="16sp"
                    android:paddingStart="3dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/text_primary"
                    app:layout_constraintBottom_toBottomOf="@+id/port_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@+id/guideline0"
                    app:layout_goneMarginStart="8dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/edit_pass_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_port_box">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.37" />

                <TextView
                    android:id="@+id/pass_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline1"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="wrap" />

                <EditText
                    android:id="@+id/pass_et"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edit_bg_selector"
                    android:inputType="number"
                    android:maxLength="6"
                    android:text="123456"
                    android:textSize="16sp"
                    android:textColor="@color/text_primary"
                    android:paddingStart="3dp"
                    android:paddingEnd="5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/pass_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@+id/guideline1"
                    app:layout_goneMarginStart="8dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conn_info_box"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/black">

            <TextView
                android:id="@+id/url_tv"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_light"
                android:text="123"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/username_title"
                app:layout_constraintTop_toBottomOf="@+id/url_tv"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:text="@string/username_no_comm"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/username_value"
                app:layout_constraintTop_toBottomOf="@+id/username_title"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_light"
                android:text="pc"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/pass_title_2"
                app:layout_constraintTop_toBottomOf="@+id/username_value"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:text="@string/password_no_comm"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/pass_value"
                app:layout_constraintTop_toBottomOf="@+id/pass_title_2"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/connect_tips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/start_server_tips"
        android:textAlignment="textStart"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle_box"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/server_toggle_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/start_btn_bg"
        android:paddingStart="63dp"
        android:paddingTop="7dp"
        android:paddingEnd="63dp"
        android:paddingBottom="8dp"
        android:text="@string/start_server"
        android:textColor="@color/text_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_tips" />


</androidx.constraintlayout.widget.ConstraintLayout>